modify team & teamMemebrs in dashboard and eventsGate
